--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "bc",
-  "version": "0.1.0",
+  "name": "file-tree-viewer",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
+    "node-sass": "^4.10.0",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-scripts": "2.1.1"
